2003-12-30  Jody Goldberg <jody@gnome.org>

	* configure.in : post release version bump

2003-12-30  Jody Goldberg <jody@gnome.org>

	* Release 2.5.1

2003-12-16  Jody Goldberg <jody@gnome.org>

	* capplets/file-types/file-types.desktop.in : remove the png so that
	  it can theme.

	* capplets/desktop-links/Makefile.am : remove .in.in path kludge.
	* capplets/desktop-links/Accessibility.directory.in :
	* capplets/desktop-links/Advanced.directory.in : ditto.

	* capplets/background/Makefile.am : no need to install capplet icon
	  anymore its part of the theme.
	* capplets/default-applications/Makefile.am :
	* capplets/font/Makefile.am  :
	* capplets/keybindings/Makefile.am :
	* capplets/keyboard/Makefile.am :
	* capplets/mouse/Makefile.am :
	* capplets/network/Makefile.am :
	* capplets/sound/Makefile.am :
	* capplets/theme-switcher/Makefile.am :
	* capplets/ui-properties/Makefile.am :
	* capplets/windows/Makefile.am :

	* capplets/accessibility/at-properties/Makefile.am :
	* capplets/accessibility/keyboard/Makefile.am :

	* capplets/background/background.desktop.in : Use the themed icon.
	* capplets/default-applications/default-applications.desktop.in :
	* capplets/font/font-properties.desktop.in :
	* capplets/keybindings/keybinding.desktop.in :
	* capplets/keyboard/keyboard.desktop.in :
	* capplets/mouse/gnome-settings-mouse.desktop.in :
	* capplets/network/gnome-network-preferences.desktop.in :
	* capplets/sound/gnome-settings-sound.desktop.in :
	* capplets/theme-switcher/gtk-theme-selector.desktop.in :
	* capplets/ui-properties/gnome-ui-properties.desktop.in :
	* capplets/windows/window-properties.desktop.in :
	* capplets/accessibility/at-properties/at-properties.desktop.in :
	* capplets/accessibility/keyboard/accessibility-keyboard.desktop.in :

2003-12-09  Kaushal Kumar  <kaushal.kumar@wipro.com>

	* capplets/display/main.c (create_dialog):
	  Fixed conflict in Alt-C mnemonic.
	  Bugzilla bug #125719.

2003-11-12  Jody Goldberg <jody@gnome.org>
