@@ -1,3 +1,9 @@
+2003-12-30  Christian Neumair  <chris@gnome-de.org>
+
+	* capplets/font/main.c: (application_font_to_gconf):
+	* capplets/display/main.c: (timeout_string): Use ngettext for plurals
+	(#125175).
+
 2003-12-30  Jody Goldberg <jody@gnome.org>
 
 	* configure.in : post release version bump
